--- a/roles/media/jellyfin/tasks/main.yml
+++ b/roles/media/jellyfin/tasks/main.yml
@@ -38,13 +38,13 @@
       TZ: "{{ timezone }}"
       "VERSION": "latest"
     volumes:
-      - ./jellyfin_config:/config
+      - "{{ config_root }}/jellyfin_config:/config"
       - "{{ data_root }}/media/tvshows:/data/tvshows"
       - "{{ data_root }}/media/anime:/data/anime"
       - "{{ data_root }}/media/movies:/data/movies"
       # - "{{ docker_dir }}/{{ container_name }}:/config"
       # - "{{ data_root }}/Media/TV:/data/TV"
-      - "{{ data_root }}_slow/Media/Transcodes:/config/data/transcodes"
+      # - "{{ data_root }}_slow/Media/Transcodes:/config/data/transcodes"
       - "{{ data_root }}/metadata:/metadata"
       - "{{ data_root }}/cache:/data/Cache"
       # - "{{ mergerfs_root }}/Media/Movies:/data/Movies"
