--- a/roles/arr/radarr/tasks/main.yml
+++ b/roles/arr/radarr/tasks/main.yml
@@ -16,10 +16,11 @@
       PGID: "{{ pgid }}"
       TZ: "{{ timezone }}"
     volumes:
-      - ./radarr_config:/config
+      - "{{ config_root }}/radarr_config:/config"
       - "{{ data_root }}/media/movies:/movies"
       - "{{ data_root }}/media/anime:/anime"
       - "{{ data_root }}/media/tvshows:/tvshows"
+      - "{{ data_root }}/media:/media"
       # - "{{ data_root }}/qbittorrent/downloads:/downloads"
       - "{{ data_root }}/transmission/downloads/complete:/downloads/complete"
     restart_policy: unless-stopped
