--- a/roles/arr/sonarr/tasks/main.yml
+++ b/roles/arr/sonarr/tasks/main.yml
@@ -16,7 +16,7 @@
       PGID: "{{ pgid }}"
       TZ: "{{ timezone }}"
     volumes:
-      - ./sonarr_config:/config
+      - "{{ config_root }}/sonarr_config:/config"
       - "{{ data_root }}/media/anime:/anime"
       - "{{ data_root }}/media/tvshows:/tvshows"
       - "{{ data_root }}/media:/media"
