--- a/roles/media/plex/tasks/main.yml
+++ b/roles/media/plex/tasks/main.yml
@@ -25,7 +25,7 @@
 #       "VERSION": docker
 #       # - PLEX_CLAIM= #optional
 #     volumes:
-#       - ./plex_config:/config
+#       - "{{ config_root }}/plex_config:/config"
 #       # - "{{ data_root }}/tvshows:/data/tvshows"
 #       - "{{ data_root }}/media/anime:/data/anime"
 #       - "{{ data_root }}/media/tvshows:/data/tv"
@@ -70,7 +70,7 @@
       ADVERTISE_IP: "http://{{ plex_ip }}:32400/"
       # - PLEX_CLAIM= #optional
     volumes:
-      - ./plex_config:/config
+      - "{{ config_root }}/plex_config:/config"
       - "{{ data_root }}/transcode:/transcode"
       - "{{ data_root }}/media:/data"
       - "/etc/localtime:/etc/localtime:ro"
