moving config to nas and adding samba config to allow nextcloud to work

--- a/roles/media/jellyfin/tasks/main.yml
+++ b/roles/media/jellyfin/tasks/main.yml
@@ -38,15 +38,15 @@
       TZ: "{{ timezone }}"
       "VERSION": "latest"
     volumes:
-      - "{{ config_root }}/jellyfin_config:/config"
-      - "{{ data_root }}/media/tvshows:/data/tvshows"
-      - "{{ data_root }}/media/anime:/data/anime"
-      - "{{ data_root }}/media/movies:/data/movies"
+      - "{{ config_root }}/jellyfin/config:/config"
+      # - "{{ data_root }}/media/tvshows:/data/tvshows"
+      - "{{ data_root }}/media:/media"
+      # - "{{ data_root }}/media/movies:/data/movies"
       # - "{{ docker_dir }}/{{ container_name }}:/config"
       # - "{{ data_root }}/Media/TV:/data/TV"
       # - "{{ data_root }}_slow/Media/Transcodes:/config/data/transcodes"
-      - "{{ data_root }}/metadata:/metadata"
-      - "{{ data_root }}/cache:/data/Cache"
+      - "{{ config_root }}/jellyfin/metadata:/metadata"
+      - "{{ config_root }}/jellyfin/data:/data"
       # - "{{ mergerfs_root }}/Media/Movies:/data/Movies"
       - "/etc/localtime:/etc/localtime:ro"
     restart_policy: unless-stopped
