--- a/roles/arr/sonarr/tasks/main.yml
+++ b/roles/arr/sonarr/tasks/main.yml
@@ -17,8 +17,8 @@
       TZ: "{{ timezone }}"
     volumes:
       - "{{ config_root }}/sonarr_config:/config"
-      - "{{ data_root }}/media/anime:/anime"
-      - "{{ data_root }}/media/tvshows:/tvshows"
+      # - "{{ data_root }}/media/anime:/anime"
+      # - "{{ data_root }}/media/tvshows:/tvshows"
       - "{{ data_root }}/media:/media"
-      - "{{ data_root }}/transmission/downloads/complete:/downloads/complete"
+      - "{{ data_root }}/transmission/data/completed:/data/completed"
     restart_policy: unless-stopped
