--- a/roles/experiments/transmission-openvpn/tasks/main.yml
+++ b/roles/experiments/transmission-openvpn/tasks/main.yml
@@ -29,16 +29,25 @@
     ports:
       - '9091:9091'
     pull: yes
+    networks:
+      - name: media_network
+        ipv4_address: "{{ transmission_ip }}"
     state: 'started'
     env:
       OPENVPN_PROVIDER: SURFSHARK
-      OPENVPN_CONFIG: us-atl_udp
+      OPENVPN_CONFIG: us-dtw_udp
       OPENVPN_USERNAME: "{{ vpn_username }}"
       OPENVPN_PASSWORD: "{{ vpn_password }}"
-      LOCAL_NETWORK: 192.168.0.0/16
+      LOCAL_NETWORK: "192.168.0.0/16,{{ media_subnet }}"
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
       TZ: "{{ timezone }}"
+      # No idea how to actually set these
+      TRANSMISSION_WEB_UI: transmission-web-control
+      TRANSMISSION_RATIO_LIMIT_ENABLED: "true"
+      TRANSMISSION_DOWNLOAD_QUEUE_SIZE: "10"
     volumes:
-      - "{{ data_root }}:/data"
+      - "{{ data_root }}/transmission/data:/data"
+      # - "{{ config_root }}/transmission:/config"
+      # - "{{ data_root }}/transmission/downloads:/downloads"
     restart_policy: unless-stopped
