--- a/roles/services/nextcloud/defaults/main.yml
+++ b/roles/services/nextcloud/defaults/main.yml
@@ -1,3 +1,3 @@
 mountpoint: "nextcloud"
-nc_db_path: /mnt/nextcloud/db
-nc_html_path: /mnt/nextcloud/html
+nc_db_path: "{{ data_root }}/nextcloud/db"
+nc_html_path: "{{ data_root }}/nextcloud/html"
