adding minecraft server config

--- a/roles/arr/readarr/tasks/main.yml
+++ b/roles/arr/readarr/tasks/main.yml
@@ -3,7 +3,7 @@
   become: yes
   docker_container:
     image: "ghcr.io/linuxserver/readarr:develop"
-    name: "readarr"
+    name: "readarr_ebooks"
     networks:
       - name: media_network
         ipv4_address: "{{ readarr_ip }}"
@@ -19,5 +19,29 @@
       # - /path/to/downloadclient-downloads:/downloads #optional
       - "{{ config_root }}/readarr_config:/config"
       - "{{ data_root }}/media/books:/books"
+      - "{{ data_root }}/transmission/data/completed:/data/completed"
+    restart_policy: unless-stopped
+
+- name: Make sure the readarr audio book container is created and running
+  become: yes
+  docker_container:
+    image: "ghcr.io/linuxserver/readarr:develop"
+    name: "readarr_audio"
+    networks:
+      - name: media_network
+        ipv4_address: "{{ readarr_audio_ip }}"
+    ports:
+      - 8788:8787
+    pull: yes
+    state: 'started'
+    env:
+      PUID: "{{ puid }}"
+      PGID: "{{ pgid }}"
+      TZ: "{{ timezone }}"
+    volumes:
+      # - /path/to/downloadclient-downloads:/downloads #optional
+      - "{{ config_root }}/readarr_audio_config:/config"
+      - "{{ data_root }}/media/audiobooks:/books"
+      - "{{ data_root }}/media:/media"
       - "{{ data_root }}/transmission/data/completed:/data/completed"
     restart_policy: unless-stopped
