--- a/roles/setup/docker/tasks/main.yml
+++ b/roles/setup/docker/tasks/main.yml
@@ -1,9 +1,10 @@
 ---
-- name: Install aptitude
-  apt:
-    name: aptitude
-    state: latest
-    update_cache: true
+# - name: Install aptitude
+#   become: yes
+#   apt:
+#     name: aptitude
+#     state: latest
+#     update_cache: true
 
 - name: Install required system packages
   apt:
