--- a/roles/setup/docker/tasks/main.yml
+++ b/roles/setup/docker/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
-# - name: Install aptitude
-#   become: yes
-#   apt:
-#     name: aptitude
-#     state: latest
-#     update_cache: true
+- name: Install aptitude
+  become: yes
+  apt:
+    name: aptitude
+    state: latest
+    update_cache: true
 
 - name: Install required system packages
   apt:
@@ -19,21 +19,22 @@
     state: latest
     update_cache: true
 
-- name: Add Docker GPG apt Key
-  apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
-    state: present
+# These might conflict with omv-extras
+# - name: Add Docker GPG apt Key
+#   apt_key:
+#     url: https://download.docker.com/linux/ubuntu/gpg
+#     state: present
 
-- name: Add Docker Repository
-  apt_repository:
-    repo: deb https://download.docker.com/linux/ubuntu focal stable
-    state: present
+# - name: Add Docker Repository
+#   apt_repository:
+#     repo: deb https://download.docker.com/linux/ubuntu focal stable
+#     state: present
 
-- name: Update apt and install docker-ce
-  apt:
-    name: "docker-ce"
-    state: latest
-    update_cache: true
+# - name: Update apt and install docker-ce
+#   apt:
+#     name: "docker-ce"
+#     state: latest
+#     update_cache: true
 
 - name: Install Docker Module for Python
   pip:
