--- a/vars/vars.yml
+++ b/vars/vars.yml
@@ -8,7 +8,7 @@ puid: '1000'
 pgid: '1000'
 timezone: "America/New_York"
 created_username: jcoulter
-config_root: "/mnt/data/config/mobile/"
+config_root: "/mnt/data/config"
 
 # 172.18.0.1 - 172.18.0.62
 media_subnet: 172.18.0.0/26
@@ -24,7 +24,6 @@ plex_ip: 172.18.0.10
 deluge_ip: 172.18.0.11
 qbittorrent_ip: 172.18.0.12
 readarr_ip: 172.18.0.13
-readarr_audio_ip: 172.18.0.19
 lidarr_ip: 172.18.0.14
 
 loki_ip: 172.18.0.15
@@ -32,6 +31,10 @@ promtail_ip: 172.18.0.16
 prometheus_ip: 172.18.0.17
 grafana_ip: 172.18.0.18
 
+readarr_audio_ip: 172.18.0.19
+
+calibre_ip: 172.18.0.20
+trilium_ip: 172.18.0.21
 
 
 # 172.18.0.65 - 172.18.0.70
