frigate and mqtt

--- a/run.yml
+++ b/run.yml
@@ -136,6 +136,10 @@
     - role:  mqtt  
       tags:
         - mqtt
+        
+    - role:  frigate  
+      tags:
+        - frigate
 
     - role:  minecraft  
       tags:
