--- a/roles/media/jellyfin/tasks/main.yml
+++ b/roles/media/jellyfin/tasks/main.yml
@@ -31,6 +31,10 @@
     # devices:
     #   - "/dev/dri/renderD128:/dev/dri/renderD128"
     state: 'started'
+    devices:
+    # VAAPI Devices
+      - /dev/dri/renderD128:/dev/dri/renderD128
+      - /dev/dri/card0:/dev/dri/card0
     env:
       "DOCKER_MODS": "linuxserver/mods:jellyfin-opencl-intel"
       PUID: "{{ puid }}"
