--- a/roles/mqtt/tasks/main.yml
+++ b/roles/mqtt/tasks/main.yml
@@ -1,22 +1,21 @@
 ---
-# https://techoverflow.net/2021/11/25/how-to-setup-standalone-mosquitto-mqtt-broker-using-docker-compose/
 
+#https://www.homeautomationguy.io/docker-tips/configuring-the-mosquitto-mqtt-docker-container-for-use-with-home-assistant/
 - name: Make sure the {{ container_name }} container is created and running
   docker_container:
     name: "{{ container_name }}"
     image: "eclipse-mosquitto"
-    network_mode: host
+    # network_mode: host
     pull: yes
     state: 'started'
-    # ports:
-    #   - "1883:1883"
+    ports:
+      - "1883:1883"
+      - "9001:9001 "
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
       TZ: "{{ timezone }}"
     volumes:
-      - "{{ config_root }}/mosquitto/conf:/mosquitto/conf"
-      - "{{ config_root }}/mosquitto/data:/mosquitto/data"
-      - "{{ config_root }}/mosquitto/log:/mosquitto/log"
+      - "{{ config_root }}/mosquitto:/mosquitto"
     state: 'started'
     restart_policy: unless-stopped
